--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':flironesdk')
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(':flironesdk')
+    compile 'com.google.firebase:firebase-storage:9.2.1'
+    compile 'com.google.firebase:firebase-auth:9.2.1'
 }
+apply plugin: 'com.google.gms.google-services'
